--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>TetraBlast Game</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-  <script src="main.js"></script>
-</head>
-<body>
-  <div id="renderDiv"></div>
-</body>
-</html>
+    <head>
+        <script type="text/javascript" src="phaser.min.js"></script>
+       <script type="text/javascript" src ="game.js"></script>
+    </head>
+    <body>
+    </body>
+</html>s
