--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script type="text/javascript" src="phaser.min.js"></script>
-       <script type="text/javascript" src ="game.js"></script>
+       <script type="text/javascript" src ="main.js"></script>
     </head>
     <body>
     </body>
